--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -589,10 +589,17 @@ strong {
   padding-right: 20px;
   padding-left: 20px;
 }
-
-.about-image .img-fluid .imgOWL{
-  height: 100%;
+#div2{
+  width: 50%;
 }
+
+img.about-image.img-fluid.imgOWL{
+  height: 400px;
+}
+
+
+
+
 
 
 /*---------------------------------------
@@ -741,6 +748,9 @@ strong {
   margin-bottom: 24px;
   padding: 40px;
   transition: all ease 0.5s;
+}
+#VisaChipCardVideo{
+  width: 600px;
 }
 
 .video-container video {
@@ -1012,7 +1022,7 @@ strong {
 #light {
   display: none;
   position: absolute;
-  top: 750%;
+  top: 815%;
   left: 50%;
   max-width: 600px;
   max-height: 360px;
@@ -1055,7 +1065,7 @@ strong {
     font-size: 40px;
   }
   #light{
-    top: 480%;
+    top: 495%;
   }
 }
 
@@ -1238,6 +1248,78 @@ strong {
   .hero-image {
     min-width: inherit;
   }
+  #div2{
+    margin: 0 !important;
+    order: 2;
+    width: 100%;
+  }
+  #section_1 > div > div > div.col-lg-5.col-12.position-relative{
+    display: none;
+  }
+  img.about-image.img-fluid.imgOWL{
+    height: 280px;
+  }
+
+  #section_1{
+    height: 50%;
+  }
+
+  .hero{
+    padding-bottom: 0;
+    padding-top: 40%;
+  }
+  .hero-title{
+    font-size: 25px;
+  }
+  .avatar-image{
+    width: 170px;
+    height: 170px;
+  }
+  strong.featured-numbers{
+    font-size: 30px;
+  }
+  p.featured-text{
+    font-size: 18px;
+  }
+  .col-4{
+    width: 50%;
+  }
+  div.services-thumb{
+    padding-bottom: 60px;
+  }
+  p.services_p{
+    font-size: 13px;
+  }
+
+  .services-icon-wrap {
+
+    width: 52%;
+    height: 54%;
+  }
+
+  .services-icon {
+    font-size: 50px;
+    position: relative;
+    bottom: 0px;
+  }
+  div#light{
+    width: 320px;
+    /* left: 12%;
+    top: 720%; */
+    margin-left: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+
+  }
+  #VisaChipCardVideo{
+    width: 320px;
+  }
+  
+  
+  
 }
 
 .owl-dots {
