--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -643,6 +643,35 @@ img.about-image.img-fluid.imgOWL{
   transform: scale(1.3);
 }
 
+/*---------------------------------------
+  EXPERIENCE              
+-----------------------------------------*/
+
+
+div.content-ex{
+  width: 100%;
+  display: flex;
+  /* justify-content: space-evenly; */
+}
+
+
+div.year_span{
+  padding-right: 4%;
+  border-right: 3px solid rgb(80, 79, 79);
+}
+.year_span h4{
+  height:45%;
+}
+
+div.p-ex{
+  padding-left: 4%;
+  display: flex;
+  flex-direction: column;
+}
+.p-ex p{
+  height: 50%;
+}
+
 
 /*---------------------------------------
   SERVICES              
@@ -1318,8 +1347,29 @@ img.about-image.img-fluid.imgOWL{
     width: 320px;
   }
   
+  .year_span h4{
+    padding-left: 20%;
+    height:43%;
+  }
+  .p-ex{
+    padding-right: 4%;
+    font-size: 14px;
+  }
+  .p-ex p{
+    font-size: 14px;
+  }
+
+  .p-ex ol li{
+    font-size: 14px;
+  }
   
   
+  
+}
+@media screen and (max-width: 380px) {
+  .profile-body p{
+    font-size: 15px;
+  }
 }
 
 .owl-dots {
