--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -569,7 +569,7 @@ strong {
   font-weight: var(--font-weight-bold);
   min-width: 140px;
   margin-right: 10px;
-  padding: 13px 30px;
+  padding: 13px 26px;
   display: inline-block;
 }
 
@@ -1259,7 +1259,16 @@ div.p-ex{
   h5 {
     font-size: 20px;
   }
-
+  #image1{
+    height: 130px;
+  }
+  #image2{
+    height: 130px;
+    width: 130px;
+  }
+  #hero-title-wrap_id{
+    padding-bottom: 50px;
+  }
   .custom-btn,
   .navbar .custom-btn {
     font-size: 13px;
